Criando o fluxo inicial de cadastro de médicos

--- a/src/AgendamentoConsultorio/AgendamentoConsultorio.UIDesktop/AgendamentoConsultorio.UIDesktop.csproj
+++ b/src/AgendamentoConsultorio/AgendamentoConsultorio.UIDesktop/AgendamentoConsultorio.UIDesktop.csproj
@@ -6,4 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AgendamentoConsultorio.Domain\AgendamentoConsultorio.Domain.csproj" />
+    <ProjectReference Include="..\AgendamentoConsultorio.Infra\AgendamentoConsultorio.Infra.csproj" />
+    <ProjectReference Include="..\AgendamentoConsultorio.Services\AgendamentoConsultorio.Services.csproj" />
+  </ItemGroup>
+
 </Project>
