--- a/src/AgendamentoConsultorio/AgendamentoConsultorio.Infra/AgendamentoConsultorio.Infra.csproj
+++ b/src/AgendamentoConsultorio/AgendamentoConsultorio.Infra/AgendamentoConsultorio.Infra.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AgendamentoConsultorio.Domain\AgendamentoConsultorio.Domain.csproj" />
+    <ProjectReference Include="..\AgendamentoConsultorio.Services\AgendamentoConsultorio.Services.csproj" />
+  </ItemGroup>
+
 </Project>
