--- a/src/AgendamentoConsultorio/AgendamentoConsultorio.UIDesktop/AgendamentoConsultorio.UIDesktop.csproj
+++ b/src/AgendamentoConsultorio/AgendamentoConsultorio.UIDesktop/AgendamentoConsultorio.UIDesktop.csproj
@@ -12,4 +12,12 @@
     <ProjectReference Include="..\AgendamentoConsultorio.Services\AgendamentoConsultorio.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
